Avoided words wrapping.

--- a/src/components/Sidebar/styles.module.css
+++ b/src/components/Sidebar/styles.module.css
@@ -32,7 +32,7 @@
 .url {
     line-height: 1;
     margin: 10px;
-    font-size: 2em;
+    font-size: 1.8em;
     font-weight: bold;
     letter-spacing: 1px;
 }
